--- a/MyDigitalCookbook/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/MyDigitalCookbook/Views/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -72,6 +73,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jT0-AT-cnB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="735.38461538461536" y="53.317535545023695"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wd3-GN-mSs">
+            <objects>
+                <viewController id="tjv-wK-h9h" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Gbi-Q3-X82">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="qju-5Q-DZ0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iHa-Jz-78v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1828" y="-319"/>
         </scene>
         <!--Recipe Detail Table View Controller-->
         <scene sceneID="eXb-At-R5g">
@@ -187,7 +203,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lKY-1J-65x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1596.9230769230769" y="53.317535545023695"/>
+            <point key="canvasLocation" x="1829" y="356"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="HQd-6C-BpA">
