--- a/MyDigitalCookbook/Views/Storyboards/Base.lproj/PhotoPicker~.storyboard
+++ b/MyDigitalCookbook/Views/Storyboards/Base.lproj/PhotoPicker~.storyboard
@@ -209,7 +209,7 @@
                                                 <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Qi-L1-08W">
                                                     <rect key="frame" x="0.0" y="0.0" width="390" height="194"/>
                                                     <connections>
-                                                        <segue destination="bS7-HV-Xyz" kind="embed" identifier="toPhotoPicker" id="FXX-6D-I97"/>
+                                                        <segue destination="ssn-Ya-RVl" kind="embed" identifier="toPhotoPicker" id="FXX-6D-I97"/>
                                                     </connections>
                                                 </containerView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uSd-YI-5KH">
@@ -327,6 +327,45 @@
             </objects>
             <point key="canvasLocation" x="-173.91304347826087" y="53.571428571428569"/>
         </scene>
+        <!--Photo Picker View Controller-->
+        <scene sceneID="GlD-i6-lUU">
+            <objects>
+                <viewController id="ssn-Ya-RVl" customClass="PhotoPickerViewController" customModule="MyDigitalCookbook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LF6-ai-KYg">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="194"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="URO-it-2Dg">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="194"/>
+                                <connections>
+                                    <action selector="selectPhotoButtonTapped:" destination="ssn-Ya-RVl" eventType="touchUpInside" id="UDt-xp-h8C"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uuQ-AJ-s92">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="194"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="URO-it-2Dg" secondAttribute="trailing" id="1Dg-g9-hVH"/>
+                            <constraint firstAttribute="bottom" secondItem="uuQ-AJ-s92" secondAttribute="bottom" id="7gq-Xd-Lqd"/>
+                            <constraint firstAttribute="trailing" secondItem="uuQ-AJ-s92" secondAttribute="trailing" id="WSc-Pz-lSq"/>
+                            <constraint firstItem="URO-it-2Dg" firstAttribute="top" secondItem="LF6-ai-KYg" secondAttribute="top" id="gbG-PK-YHt"/>
+                            <constraint firstItem="uuQ-AJ-s92" firstAttribute="leading" secondItem="LF6-ai-KYg" secondAttribute="leading" id="pVT-sf-por"/>
+                            <constraint firstItem="uuQ-AJ-s92" firstAttribute="top" secondItem="LF6-ai-KYg" secondAttribute="top" id="rYx-V7-HhV"/>
+                            <constraint firstItem="URO-it-2Dg" firstAttribute="leading" secondItem="LF6-ai-KYg" secondAttribute="leading" id="uNg-kT-GH5"/>
+                            <constraint firstAttribute="bottom" secondItem="URO-it-2Dg" secondAttribute="bottom" id="yFX-HL-GXw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="photoImageView" destination="uuQ-AJ-s92" id="mj9-6S-O6H"/>
+                        <outlet property="selectPhotoButton" destination="URO-it-2Dg" id="D4u-gZ-cLp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AH5-gY-7Vl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2589" y="54"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="1di-fk-QWg">
             <objects>
@@ -341,6 +380,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NcY-E1-AOu">
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="267"/>
                                 <state key="normal" image="food-default"/>
+                                <connections>
+                                    <action selector="selectPhotoButtonTapped:" destination="ssn-Ya-RVl" eventType="touchUpInside" id="IXe-QT-hDr"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -359,14 +401,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5z-vM-M10" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2569" y="-941"/>
-        </scene>
-        <!--PhotoPicker-->
-        <scene sceneID="SvT-A4-vDh">
-            <objects>
-                <viewControllerPlaceholder storyboardName="PhotoPicker" id="bS7-HV-Xyz" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="H6Y-oe-xVY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2429" y="53"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
